force-app/main/default/objects/ucinn_ascendv2__Excluded_Designation__c/ucinn_ascendv2__Excluded_Designation__c.object-meta.xml
<CustomObject>
    <description>Designation that is excluded by the organization during the creation of matching gifts.</description>
    <label>Excluded Designation</label>
    <nameField>
        <label>Excluded Designation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Excluded Designations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>