force-app/main/default/objects/ucinn_ascendv2__Excluded_Designation__c/fields/ucinn_ascendv2__Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Excluded Designations</relationshipLabel>
    <relationshipName>Excluded_Designations_Account</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>