force-app/main/default/objects/ucinn_ascendv2__Excluded_Designation__c/fields/ucinn_ascendv2__Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Excluded Designations</relationshipLabel>
    <relationshipName>Excluded_Designations_Designation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>