force-app/main/default/objects/ucinn_ascendv2__Excluded_Designation__c/fields/ucinn_ascendv2__Excluded_Designation_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Excluded_Designation_Name_Auto_Number__c</fullName>
    <displayFormat>ED-{0000000}</displayFormat>
    <label>Excluded Designation Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>